--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zoudong.permission</groupId>
-    <artifactId>com.zoudong.permission.facade</artifactId>
+    <groupId>com.zoudong</groupId>
+    <artifactId>com.zoudong.spring.cloud.permission.core.facade</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>permission-facade</name>
-    <description>permission-facade</description>
+    <name>spring-cloud-permission-core-facade</name>
+    <description>spring-cloud-permission-core-facade</description>
 
 
     <properties>
